--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
-    "vanjs-ext": "^0.6.3"
+    "@types/vis": "^4.21.27",
+    "sharp": "^0.34.4",
+    "vanjs-ext": "^0.6.3",
+    "vis-data": "^8.0.3",
+    "vis-network": "^10.0.2"
   }
 }
